# ca-test

./: .gitignore  README.md  docker-compose.yml
compose/django/: Dockerfile  start.sh
compose/nginx/: default.conf  the_eye.conf
the_eye/: .env.example  pyproject.toml  pytest.ini  requirements.txt
the_eye/events/: managers.py  models.py  serializers.py  tasks.py  urls.py  views.py
the_eye/events/migrations/: 0001_initial.py
the_eye/tests/events/: conftest.py  factories.py  test_views.py
the_eye/the_eye/: celery.py  settings.py  urls.py
